--- a/NaiveBayes/NaiveBayes/NaiveBayes.vcxproj
+++ b/NaiveBayes/NaiveBayes/NaiveBayes.vcxproj
@@ -97,6 +97,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="NaiveBayes.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
